gccida/c3/bitmap_copy
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_copy/src/bitmap.c:743:12: error: expected expression
*( _OWORD *)&to->first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_copy/src/bitmap.c:743:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&to->first = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_copy/src/bitmap.c:781:12: error: expected expression
*( _OWORD *)( object_base + 24) = v5; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_copy/src/bitmap.c:781:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( object_base + 24) = v5; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/bitmap_copy/src/obj/bitmap.o] Error 1
